# wine-mpris

./: Cargo.toml  README.md  build.sh  windows.media.mediacontrol.spec
src/: bindings.rs  controls.rs  factory.rs  lib.rs  mpris.rs  propsys.rs
