[package]
name = "mediacontrol"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
env_logger = "0.11.3"
log = "0.4.21"
# libdbus-sys = "0.2.3"
windows = {version = "0.54.0", features = [
  "Media",
  "Media_Control",
  "Storage_Streams",
  "implement",
  "Win32_Foundation",
  "Win32_System_WinRT",
  "Win32_UI_WindowsAndMessaging"
]}
windows-core = "0.54.0"
windows-interface = "0.53.0"
wine-macro = "*"

[profile.release]
opt-level = "s"
