[package]
name = "mediacontrol"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
env_logger = "0.11.3"
log = "0.4.21"
# libdbus-sys = "0.2.3"
windows = {version = "0.54.0", features = [
  "implement",
  "Foundation_Collections",
  "Media",
  "Media_Control",
  "Storage_Streams",
  "Win32_Foundation",
  "Win32_System_Threading",
  "Win32_System_WinRT",
  "Win32_System_LibraryLoader",
  "Win32_System_SystemServices", # IMAGE_DOS_HEADER
  "Win32_UI_WindowsAndMessaging",
  "Wdk_Storage_FileSystem",# NtQueryVirtualMemory
]}
windows-core = "0.54.0"
windows-interface = "0.53.0"

[profile.release]
opt-level = "s"
